<resources>
    <string name="app_name">alpha</string>
    <string name="title_activity_log_in_on_">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="log_on_button">Create new user</string>
    <string name="log_in_button">Log in</string>
    <string name="error_send_verification_email">We have some problems sending your email verification try to log in with your new account</string>
    <string name="error_log_on">We have some problems creating your new account. Please retry again later</string>
    <string name="error_email_not_valid">This email address is not valid</string>
    <string name="error_email_not_existing">This email address doesn\'t exist in our database. Please retry</string>
    <string name="error_email_exists">This email address is already registered. Try to log in.</string>
    <string name="error_password_not_valid">Password not valid. Password must have at least 6 caracthers, a number, and a symbol like .!#*()?,</string>
    <string name="error_passwords_not_equal">Passwords is not equal</string>
    <string name="error_log_in">We have some problems loggin in your account. Please retry again later</string>
    <string name="no_connection_info">There is no connection. Please Try again</string>
    <string name="attention">Attention</string>
    <string name="existing_email">This email address is still used</string>
    <string name="go_to_log_in">Go to login</string>
    <string name="Cancel">Cancel</string>
    <string name="compilation_failed">Some fields are not compilated correctly. Pleae try again</string>
    <string name="retry">Retry</string>
    <string name="done">Done</string>
    <string name="resend_verification_email">Resend the email</string>
    <string name="email_sent">We\'ve just sent an email to the email address</string>
    <string name="change_email_address">Change the email address</string>
    <string name="choose_your_user_image">Scegli un\'immagine profilo</string>
    <string name="open_camera">Take a photo</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="nickname">Nickname</string>
    <string name="confirm">Confirm</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="no_camera_on_device">This device has no camera</string>
    <string name="error_existing_nickname">This Nickname is still used</string>
    <string name="error_adding_nickname">Error adding nickname. Try again</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="search">Search</string>
    <string name="error_ability">Add at least one ability</string>
    <string name="search_ability">Search a new ability</string>
    <string name="generic_error">We have got some problem. Cod error </string>
    <string name="add_help">Write your Help here.</string>
    <string name="remain_characters"> characters left.</string>
</resources>