<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"

    android:layout_below="@+id/name"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="textEmailAddress"
        android:hint="@string/email" />


    <TextView
        android:id="@+id/emailErrorTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        />
    <TextView
        android:id="@+id/passwordErrorTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        />


    <TextView
        android:id="@+id/connectionInfoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FF0000" />
    <Button
        android:id="@+id/confirmRegistrationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm" />
</LinearLayout>